Trying to fix alignment

--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ ul {
     margin: 0;
 }
 
-#uci-section {
+#weekTabs {
     align-items: center;
     display: flex;
     flex-direction: column;
